--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_PORT=5433
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=postgres
+PGHOST=localhost
+PGPORT=5433
+PGUSER=postgres
+PGPASSWORD=postgres
+PGDATABASE=postgres
 PORT=8080
